# frontend

./: CLA.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  __init__.py  _social_meta.html.template  add-automation-element-dialog.ts  assist-pipeline-detail-conversation.ts  assist-pipeline-detail-wakeword.ts  assist-pref.ts  authorize.html.template  automation_i18n.ts  blueprint-generic-editor.ts  bug_report.yml  cast-demo-lovelace.ts  cloud-discover.ts  config.yml  configuration-menu.markdown  core  demo_services.ts  demo_states.js  devcontainer.json  dialog-add-application-credential.ts  dialog-add-integration.ts  dialog-automation-mode.ts  dialog-calendar-event-editor.ts  dialog-data-entry-flow.ts  dialog-hassio-repositories.ts  dialog-helper-detail.ts  dialog-import-blueprint.ts  dialog-join-beta.ts  dialog-mount-view.ts  dialog-new-automation.ts  dialog-person-detail.ts  dialog-system-log-detail.ts  dialog-tag-detail.ts  dialog-todo-item-editor.ts  dialog-user-detail.ts  dialog-voice-assistant-pipeline-detail.ts  disconnect-toast-mixin.ts  (+123 more)
