[build-system]
requires = ["setuptools~=68.0", "wheel~=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name         = "home-assistant-frontend"
version      = "20240228.0"
license      = {text = "Apache-2.0"}
description  = "The Digo frontend"
readme       = "README.md"
authors      = [
    {name = "The Digo Authors", email = "hello@home-assistant.io"}
]
requires-python = ">=3.10.0"

[project.urls]
"Homepage" = "https://github.com/home-assistant/frontend"

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["hass_frontend*"]
